hphp/test/zend/good/ext/pdo/tests/pdo_037.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('pdo')) die('skip');
}
