hphp/test/zend/bad/ext/date/tests/bug53437_var3.php.skipif
<?php if (PHP_INT_SIZE != 4) { die('skip 32 bit only'); } ?>